--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="http://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
 
-<title>CMCK Countdown Timer</title>
+<title><h1>CMS-CMNO</h1> Countdown Timer</title>
 
 </head>
 
@@ -39,8 +39,8 @@
     <div class="display-remain-time">00:30</div>
     <button class="play" id="pause"></button>
   </div>
+  <button data-setter="five-minutes">5 minutes</button>
 </div>
-<button data-setter="seconds-minus">TEST</button>
 <script src="script.js"></script>
 
 </body>
