Second button and styles

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <div class="display-remain-time">00:30</div>
     <button class="play" id="pause"></button>
   </div>
-  <button data-setter="five-minutes">5 minutes</button>
+  <button class="bottom_button" data-setter="five-minutes">5 minutes</button>
+  <button class="bottom_button" data-setter="ten-minutes">10 minutes</button>
 </div>
 <script src="script.js"></script>
 
