--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <link href="http://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
 
-<title><h1>CMS-CMNO</h1> Countdown Timer</title>
+<img src="https://cms.law/bundles/etecturedpcms/img/logo_tagline_cms.svg">
+<title>Countdown Timer</title>
 
 </head>
 
