--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="http://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
 
-<img src="https://cms.law/bundles/etecturedpcms/img/logo_tagline_cms.svg">
+<img class="logo" src="https://cms.law/bundles/etecturedpcms/img/logo_tagline_cms.svg">
 <title>Countdown Timer</title>
 
 </head>
@@ -30,8 +30,12 @@
     <div class="display-remain-time">00:30</div>
     <button class="play" id="pause"></button>
   </div>
-  <button class="bottom_button" data-setter="five-minutes">5 minutes</button>
-  <button class="bottom_button" data-setter="ten-minutes">10 minutes</button>
+  <div class="button_holder">
+    <button class="bottom_button" data-setter="five-minutes">5 minutes</button>
+    <button class="bottom_button" data-setter="ten-minutes">10 minutes</button>
+    <button class="bottom_button" data-setter="reset">10 minutes</button>
+  </div>
+
 </div>
 <script src="script.js"></script>
 
