--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <link href="http://www.cssscript.com/wp-includes/css/sticky.css" rel="stylesheet" type="text/css">
 <link href="style.css" rel="stylesheet" type="text/css">
 
-<img class="logo" src="https://cms.law/bundles/etecturedpcms/img/logo_tagline_cms.svg">
 <title>Countdown Timer</title>
 
 </head>
 
 <body>
-<h1>CMCK Countdown Timer</h1>
+<img class="logo" src="https://cms.law/bundles/etecturedpcms/img/logo_tagline_cms.svg">
+<h1>Countdown Timer</h1>
 <div class="container">
   <div class="circle"> <svg width="300" viewBox="0 0 220 220" xmlns="http://www.w3.org/2000/svg">
     <g transform="translate(110,110)">
@@ -31,10 +31,10 @@
     <button class="play" id="pause"></button>
   </div>
   <div class="button_holder">
-    <button class="bottom_button" data-setter="five-minutes">5 minutes</button>
-    <button class="bottom_button" data-setter="ten-minutes">10 minutes</button>
-    <button class="bottom_button" data-setter="reset">10 minutes</button>
-  </div>
+    <button class="bottom_button" data-setter="five-minutes">+5 min</button>
+    <button class="bottom_button" data-setter="ten-minutes">+ 10 min</button>
+  </div>  <button class="bottom_button reset" data-setter="reset">RESET</button>
+
 
 </div>
 <script src="script.js"></script>
