--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<img class="logo" src="https://cms.law/bundles/etecturedpcms/img/logo_tagline_cms.svg">
+<img class="logo" src="https://en.wikipedia.org/wiki/CMS_(law_firm)#/media/File:CMS_Cameron_McKenna_logo.svg">
 <div class="container">
   <div class="circle"> <svg width="300" viewBox="0 0 220 220" xmlns="http://www.w3.org/2000/svg">
     <g transform="translate(110,110)">
