--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-<img class="logo" src="https://en.wikipedia.org/wiki/CMS_(law_firm)#/media/File:CMS_Cameron_McKenna_logo.svg">
+<img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/95/CMS_Cameron_McKenna_logo.svg/2560px-CMS_Cameron_McKenna_logo.svg.png">
 <div class="container">
-  <div class="circle"> <svg width="300" viewBox="0 0 220 220" xmlns="http://www.w3.org/2000/svg">
+  <div class="circle"> <svg width="450" viewBox="0 0 220 220" xmlns="http://www.w3.org/2000/svg">
     <g transform="translate(110,110)">
       <circle r="100" class="e-c-base"/>
       <g transform="rotate(-90)">
