--- a/button.html
+++ b/button.html
@@ -3,7 +3,9 @@
     <link href="button-styles.css" rel="stylesheet" type="text/css">
 
     <body>
-        <span class="text">Press the button when you feel that speaker drifted from topic.</span>
-        <a href="#" class="myButton">OUT OF TOPIC</a>
+        <div class="container">
+            <span class="text">Press the button when you feel that speaker drifted from topic.</span>
+            <a href="#" class="myButton">OUT OF TOPIC</a>
+        </div>
     </body>
 </html>
