--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-<img class="logo" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/95/CMS_Cameron_McKenna_logo.svg/2560px-CMS_Cameron_McKenna_logo.svg.png">
+  <div class="pictures_holder">
+    <img class="logo" width="260px" src="https://upload.wikimedia.org/wikipedia/en/thumb/9/95/CMS_Cameron_McKenna_logo.svg/2560px-CMS_Cameron_McKenna_logo.svg.png">
+    <img class="qrcode" width="260px" height="260px" src="frame.png">
+  </div>
 <div class="container">
   <div class="circle"> <svg width="450" viewBox="0 0 220 220" xmlns="http://www.w3.org/2000/svg">
     <g transform="translate(110,110)">
