--- a/button.html
+++ b/button.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
     <link href="button-styles.css" rel="stylesheet" type="text/css">
 
