--- a/button.html
+++ b/button.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="referrer" content="no-referrer" />
 <html>
     <link href="button-styles.css" rel="stylesheet" type="text/css">
 
