--- a/button.html
+++ b/button.html
@@ -6,7 +6,7 @@
     <body>
         <div class="container">
             <span class="text">Press the button when you feel that speaker drifted from topic.</span>
-            <a href="#" class="myButton" onclick="schedule()">OUT OF TOPIC</a>
+            <a class="myButton" onclick="schedule()">OUT OF TOPIC</a>
         </div>
     </body>
     <script>
